--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "kiratech-assignment"
 version = "0.1.0"
-description = "Add your description here"
+description = "Kiratech Tech Assignment"
 readme = "README.md"
 authors = [
     { name = "Jeffrey04", email = "mycyberpet@yahoo.com" }
@@ -11,6 +11,7 @@ dependencies = [
     "django>=5.1.5",
     "django-filter>=24.3",
     "djangorestframework>=3.15.2",
+    "gunicorn>=23.0.0",
 ]
 
 [build-system]
