--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,3 +17,9 @@ dependencies = [
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.uv]
+package = true
+
+#[tool.uv.workspace]
+#members = ["src/kiratech", "src/inventory"]
